--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 PORT=4000
-ACCESS_CONTROL_ALLOW_ORIGIN='*'
+# ACCESS_CONTROL_ALLOW_ORIGIN='*'
+ACCESS_CONTROL_ALLOW_ORIGIN='http://localhost:3000'
+DATABASE_URL=postgresql://neondb_owner:npg_r0oEPYstwJ2Z@ep-red-rice-a1pya3fe-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require
 ACCESS_TOKEN_SECRET='rahsia'
 ACCESS_TOKEN_EXPIRES_IN='10m'
 REFRESH_TOKEN_SECRET='segarkan'
