--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-PORT=4000
+APP_PORT=4000
+SOCKET_SERVER_PORT=4001
 # ACCESS_CONTROL_ALLOW_ORIGIN='*'
 ACCESS_CONTROL_ALLOW_ORIGIN='http://localhost:3000'
 DATABASE_URL=postgresql://neondb_owner:npg_r0oEPYstwJ2Z@ep-red-rice-a1pya3fe-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require
