--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Tic Tac Toe Backend Application",
   "engine": {
-    "nodejs": "20.18.0"
+    "node": "20.18.0"
   },
   "main": "index.js",
   "scripts": {
