--- a/.env
+++ b/.env
@@ -1,9 +1,12 @@
 APP_PORT=4000
 SOCKET_SERVER_PORT=4001
+# BACKEND_URL='http://localhost'
+BACKEND_URL='https://tictactoe-host.onrender.com'
 # ACCESS_CONTROL_ALLOW_ORIGIN='*'
-ACCESS_CONTROL_ALLOW_ORIGIN='http://localhost:3000'
+# ACCESS_CONTROL_ALLOW_ORIGIN='http://localhost:3000'
+ACCESS_CONTROL_ALLOW_ORIGIN='https://tictactoe-host.onrender.com'
 DATABASE_URL=postgresql://neondb_owner:npg_r0oEPYstwJ2Z@ep-red-rice-a1pya3fe-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require
 ACCESS_TOKEN_SECRET='rahsia'
 ACCESS_TOKEN_EXPIRES_IN='10m'
 REFRESH_TOKEN_SECRET='segarkan'
-REFRESH_TOKEN_EXPIRES_IN='10m'
+REFRESH_TOKEN_EXPIRES_IN='1d'
