--- a/.env.local
+++ b/.env.local
@@ -1,7 +1,7 @@
-NODE_ENV="prod"
+NODE_ENV="local"
 APP_PORT=4000
-BACKEND_URL='https://tictactoe-host.onrender.com'
-ACCESS_CONTROL_ALLOW_ORIGIN='https://tictactoe-ui.onrender.com'
+BACKEND_URL='http://localhost'
+ACCESS_CONTROL_ALLOW_ORIGIN='http://localhost:3000'
 DATABASE_URL=postgresql://neondb_owner:npg_r0oEPYstwJ2Z@ep-red-rice-a1pya3fe-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require
 ACCESS_TOKEN_SECRET='rahsia'
 ACCESS_TOKEN_EXPIRES_IN='10m'
